--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="countdown2 cid-rahnQ9qHh6" id="countdown2-3">
+<section class="engine"><a href="https://mobirise.info/g">how to build a site</a></section><section class="countdown2 cid-rahnQ9qHh6 mbr-parallax-background" id="countdown2-3">
 
     
 
-    
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(255, 255, 255);">
+    </div>
 
     <div class="container">
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2">Torne-se um músico</h2>
@@ -123,7 +124,7 @@
 
         <div class="media-container-row mt-5 pt-3">
             <div class="mbr-figure" style="width: 60%;">
-                <a href="http://comotocarviolaoem30dias.launchrock.com/"><img src="assets/images/baixe-grtis-1204x677.png" alt="Mobirise" title=""></a>
+                <a href="http://bit.ly/MEU_EBOOK_" target="_blank"><img src="assets/images/baixe-grtis-1204x677.png" alt="Mobirise" title=""></a>
             </div>
             <div class="tabs-container">
                 <ul class="nav nav-tabs" role="tablist">
@@ -619,13 +620,13 @@
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/countdown/jquery.countdown.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/mbr-tabs/mbr-tabs.js"></script>
   <script src="assets/bootstrapcarouselswipe/bootstrap-carousel-swipe.js"></script>
   <script src="assets/mbr-clients-slider/mbr-clients-slider.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
